# squashbox

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Package.swift  README.md  build.bat  build_output.txt  build_output10.txt  build_output11.txt  build_output12.txt  build_output13.txt  build_output14.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output5.txt  build_output6.txt  build_output7.txt  build_output8.txt  build_output9.txt  build_release.txt  run.bat  test.bat
.agent/workflows/: swift-build.md
Sources/CLzma/: config.h
Sources/CLzma/include/: CLzma.h
Sources/CSquashFS/: csquashfs_shim.c
Sources/CSquashFS/include/: CSquashFS.h  module.modulemap
Sources/CZlib/include/: CZlib.h
Sources/CZstd/include/: CZstd.h
Sources/Drivers/Linux/: .gitkeep
Sources/Drivers/Windows/: .gitkeep
Sources/Drivers/Windows/CProjFS/: cprojfs_shim.c
Sources/Drivers/Windows/CProjFS/include/: CProjFS.h  module.modulemap
Sources/Drivers/Windows/ProjFsDriver/: ProjFsDriver.swift
Sources/Drivers/macOS/: .gitkeep
Sources/SquashFsSource/: SquashFsSource.swift
Sources/SquashboxCore/: Errors.swift  FilenameMapping.swift  InodeIndex.swift  OutputFormatting.swift  Types.swift  VirtualFsProvider.swift
Sources/SquashboxUniFFI/: squashbox_uniffi.swift
Sources/SwiftSquashFS/: BinaryReader.swift  BinaryWriter.swift
Sources/SwiftSquashFS/Compression/: Compressor.swift  GzipCompressor.swift  XzCompressor.swift  ZstdCompressor.swift
Sources/SwiftSquashFS/Format/: DataBlock.swift  DirectoryTable.swift  Flags.swift  FragmentTable.swift  IdTable.swift  Inode.swift  MetadataBlock.swift  Superblock.swift
Sources/SwiftSquashFS/Reader/: FileDataReader.swift  SquashFsReader.swift
Sources/sqb/: Sqb.swift
Sources/squashbox_uniffiFFI/: stub.c
Sources/squashbox_uniffiFFI/include/: module.modulemap
Tests/SquashFsSourceTests/: SquashFsSourceTests.swift
Tests/SquashboxCoreTests/: FilenameMappingTests.swift  InodeIndexTests.swift  MockProviderTests.swift  TypesTests.swift
Tests/SwiftSquashFSTests/: SwiftSquashFSTests.swift
bindings/swift/: squashbox_uniffiFFI.h  squashbox_uniffiFFI.modulemap
crates/macos-fskit/: Cargo.toml  build.rs
crates/macos-fskit/src/: lib.rs  objc_bindings.rs  runtime.rs  types.rs
crates/squashbox-core/: Cargo.toml
crates/squashbox-core/src/: cli.rs  fmt.rs  lib.rs  nfs.rs  provider.rs  squashfs.rs  types.rs  zip.rs
crates/squashbox-core/tests/: create_fixture.rs  integration.rs  path_edge_cases.rs  ubuntu_stress.rs
crates/squashbox-macos/: Cargo.toml
crates/squashbox-macos/src/: ffi.rs  fskit_source.rs  lib.rs  main.rs
crates/squashbox-uniffi/: Cargo.toml
crates/squashbox-uniffi/src/: lib.rs
crates/squashbox-windows/: Cargo.toml
crates/squashbox-windows/src/: lib.rs  main.rs  projfs_source.rs
crates/squashbox-windows/tests/: projfs_integration.rs  ubuntu_from_windows.rs
docs/: architecture.md  driver-lifecycles.md  initial-research.md  overview.md
macos/Squashbox/: Info.plist  Squashbox.entitlements  SquashboxApp.swift
macos/SquashboxFS/: Info.plist  SquashboxFS.entitlements  SquashboxFSExtension.swift
macos/include/: module.modulemap  squashbox_ffi.h
scripts/: build-macos.sh
