[workspace]
resolver = "2"
members = [
    "crates/squashbox-core",
    "crates/squashbox-windows",
]
exclude = ["crates/backhand"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jagtesh Chadha <jagtesh@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Core
backhand = { version = "0.25", default-features = false }
thiserror = "2"

# Windows
windows-projfs = "0.1.7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
log = "0.4"
env_logger = "0.11"

# Dev/testing
tempfile = "3"

[patch.crates-io]
# We maintain a fork of backhand that fixes Windows path validation:
# DirEntry::name() now uses raw-byte checks instead of Path::file_name(),
# and maps Windows-illegal characters (backslash, colon, etc.) to Unicode
# Private Use Area codepoints so Linux filenames are losslessly round-trippable.
# See: https://github.com/jagtesh/backhand
backhand = { git = "https://github.com/jagtesh/backhand", rev = "894988816e5b43a508fd8db28c08463ccca49bd7" }
