[package]
name = "squashbox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Platform-agnostic virtual filesystem provider (SquashFS, ZIP)"

[lib]
name = "squashbox_core"
# staticlib needed for UniFFI linking into macOS Swift appex
crate-type = ["lib", "staticlib"]

[features]
default = ["zstd", "xz", "gzip"]
# Compression backends (enabled via backhand features)
zstd = ["backhand/zstd"]
xz = ["backhand/xz"]
gzip = ["backhand/gzip"]
lz4 = ["backhand/lz4"]
lzo = ["backhand/lzo"]
# Enable heavy stress tests (require external test fixtures)
ubuntu_stress = []

[dependencies]
backhand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros", "signal", "time", "process"] }
nfsserve = "0.10.2"
async-trait = "0.1"
libc = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = { workspace = true }
