[package]
name = "squashbox-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Windows ProjFS driver for Squashbox"

[[bin]]
name = "sqb"
path = "src/main.rs"

[lib]
name = "squashbox_windows"
path = "src/lib.rs"

[dependencies]
squashbox-core = { path = "../squashbox-core" }
windows-projfs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
